src/org/uva/sea/ql/parser/antlr/QLParser.java
// $ANTLR 3.4 /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g 2013-04-26 17:52:05

package org.uva.sea.ql.parser.antlr;
import java.util.HashMap;
import java.util.LinkedList;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.uva.sea.ql.ast.expr.Expr;
import org.uva.sea.ql.ast.expr.Ident;
import org.uva.sea.ql.ast.expr.binary.algebraic.Add;
import org.uva.sea.ql.ast.expr.binary.algebraic.Div;
import org.uva.sea.ql.ast.expr.binary.algebraic.Mul;
import org.uva.sea.ql.ast.expr.binary.algebraic.Sub;
import org.uva.sea.ql.ast.expr.binary.bool.And;
import org.uva.sea.ql.ast.expr.binary.bool.Eq;
import org.uva.sea.ql.ast.expr.binary.bool.GEq;
import org.uva.sea.ql.ast.expr.binary.bool.GT;
import org.uva.sea.ql.ast.expr.binary.bool.LEq;
import org.uva.sea.ql.ast.expr.binary.bool.LT;
import org.uva.sea.ql.ast.expr.binary.bool.NEq;
import org.uva.sea.ql.ast.expr.binary.bool.Or;
import org.uva.sea.ql.ast.expr.unary.Neg;
import org.uva.sea.ql.ast.expr.unary.Not;
import org.uva.sea.ql.ast.expr.unary.Pos;
import org.uva.sea.ql.ast.expr.values.BoolLit;
import org.uva.sea.ql.ast.expr.values.DecimalLit;
import org.uva.sea.ql.ast.expr.values.IntegerLit;
import org.uva.sea.ql.ast.expr.values.StringLit;
import org.uva.sea.ql.ast.form.Body;
import org.uva.sea.ql.ast.form.BodyElement;
import org.uva.sea.ql.ast.form.ComputedQuestion;
import org.uva.sea.ql.ast.form.ConditionalElement;
import org.uva.sea.ql.ast.form.Form;
import org.uva.sea.ql.ast.form.IfThen;
import org.uva.sea.ql.ast.form.IfThenElse;
import org.uva.sea.ql.ast.form.Question;
import org.uva.sea.ql.ast.types.BoolType;
import org.uva.sea.ql.ast.types.IntType;
import org.uva.sea.ql.ast.types.MoneyType;
import org.uva.sea.ql.ast.types.StringType;
import org.uva.sea.ql.ast.types.Type;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class QLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "BoolLit", "COMMENT", "Decimal", "INTEGER", "Ident", "Int", "MONEY", "STRING", "StringLit", "WS", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'else'", "'form'", "'if'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int BOOLEAN=4;
    public static final int BoolLit=5;
    public static final int COMMENT=6;
    public static final int Decimal=7;
    public static final int INTEGER=8;
    public static final int Ident=9;
    public static final int Int=10;
    public static final int MONEY=11;
    public static final int STRING=12;
    public static final int StringLit=13;
    public static final int WS=14;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public QLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public QLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[41+1];
         

    }

    public String[] getTokenNames() { return QLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g"; }





        private List<String> errors = new LinkedList<String>();
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errors.add(hdr + " " + msg);
        }
        public List<String> getErrors() {
            return errors;
        }



    // $ANTLR start "type"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:46:1: type returns [Type result] : ( INTEGER | BOOLEAN | STRING | MONEY );
    public final Type type() throws RecognitionException {
        Type result = null;

        int type_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:47:2: ( INTEGER | BOOLEAN | STRING | MONEY )
            int alt1=4;
            switch ( input.LA(1) ) {
            case INTEGER:
                {
                alt1=1;
                }
                break;
            case BOOLEAN:
                {
                alt1=2;
                }
                break;
            case STRING:
                {
                alt1=3;
                }
                break;
            case MONEY:
                {
                alt1=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:47:3: INTEGER
                    {
                    match(input,INTEGER,FOLLOW_INTEGER_in_type55); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new IntType();}

                    }
                    break;
                case 2 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:48:3: BOOLEAN
                    {
                    match(input,BOOLEAN,FOLLOW_BOOLEAN_in_type62); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new BoolType();}

                    }
                    break;
                case 3 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:49:3: STRING
                    {
                    match(input,STRING,FOLLOW_STRING_in_type69); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new StringType();}

                    }
                    break;
                case 4 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:50:3: MONEY
                    {
                    match(input,MONEY,FOLLOW_MONEY_in_type75); if (state.failed) return result;

                    if ( state.backtracking==0 ) {result = new MoneyType();}

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, type_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "type"



    // $ANTLR start "form"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:55:1: form returns [Form result] : 'form' Ident '{' body '}' EOF ;
    public final Form form() throws RecognitionException {
        Form result = null;

        int form_StartIndex = input.index();

        Token Ident1=null;
        Body body2 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:56:2: ( 'form' Ident '{' body '}' EOF )
            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:56:3: 'form' Ident '{' body '}' EOF
            {
            match(input,31,FOLLOW_31_in_form95); if (state.failed) return result;

            Ident1=(Token)match(input,Ident,FOLLOW_Ident_in_form97); if (state.failed) return result;

            match(input,33,FOLLOW_33_in_form100); if (state.failed) return result;

            pushFollow(FOLLOW_body_in_form102);
            body2=body();

            state._fsp--;
            if (state.failed) return result;

            match(input,35,FOLLOW_35_in_form104); if (state.failed) return result;

            match(input,EOF,FOLLOW_EOF_in_form106); if (state.failed) return result;

            if ( state.backtracking==0 ) {result = new Form(new Ident((Ident1!=null?Ident1.getText():null)),body2);}

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, form_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "form"



    // $ANTLR start "body"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:63:2: body returns [Body result] : ( element )* ;
    public final Body body() throws RecognitionException {
        Body result = null;

        int body_StartIndex = input.index();

        BodyElement element3 =null;


         Body body= new Body();  
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:65:3: ( ( element )* )
            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:65:4: ( element )*
            {
            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:65:4: ( element )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==Ident||LA2_0==32) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:65:5: element
            	    {
            	    pushFollow(FOLLOW_element_in_body141);
            	    element3=element();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { body.addElement(element3) ; }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            if ( state.backtracking==0 ) {result =body;}

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, body_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "body"



    // $ANTLR start "element"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:69:1: element returns [BodyElement result] : ( conditionalElement | question | computedQuestion );
    public final BodyElement element() throws RecognitionException {
        BodyElement result = null;

        int element_StartIndex = input.index();

        ConditionalElement conditionalElement4 =null;

        Question question5 =null;

        ComputedQuestion computedQuestion6 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:70:3: ( conditionalElement | question | computedQuestion )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==32) ) {
                alt3=1;
            }
            else if ( (LA3_0==Ident) ) {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==24) ) {
                    int LA3_3 = input.LA(3);

                    if ( (LA3_3==StringLit) ) {
                        switch ( input.LA(4) ) {
                        case INTEGER:
                            {
                            int LA3_5 = input.LA(5);

                            if ( (LA3_5==EOF||LA3_5==Ident||LA3_5==32||LA3_5==35) ) {
                                alt3=2;
                            }
                            else if ( (LA3_5==18) ) {
                                alt3=3;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return result;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 5, input);

                                throw nvae;

                            }
                            }
                            break;
                        case BOOLEAN:
                            {
                            int LA3_6 = input.LA(5);

                            if ( (LA3_6==EOF||LA3_6==Ident||LA3_6==32||LA3_6==35) ) {
                                alt3=2;
                            }
                            else if ( (LA3_6==18) ) {
                                alt3=3;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return result;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 6, input);

                                throw nvae;

                            }
                            }
                            break;
                        case STRING:
                            {
                            int LA3_7 = input.LA(5);

                            if ( (LA3_7==EOF||LA3_7==Ident||LA3_7==32||LA3_7==35) ) {
                                alt3=2;
                            }
                            else if ( (LA3_7==18) ) {
                                alt3=3;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return result;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 7, input);

                                throw nvae;

                            }
                            }
                            break;
                        case MONEY:
                            {
                            int LA3_8 = input.LA(5);

                            if ( (LA3_8==EOF||LA3_8==Ident||LA3_8==32||LA3_8==35) ) {
                                alt3=2;
                            }
                            else if ( (LA3_8==18) ) {
                                alt3=3;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return result;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 8, input);

                                throw nvae;

                            }
                            }
                            break;
                        default:
                            if (state.backtracking>0) {state.failed=true; return result;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 4, input);

                            throw nvae;

                        }

                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return result;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 3, input);

                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:70:4: conditionalElement
                    {
                    pushFollow(FOLLOW_conditionalElement_in_element168);
                    conditionalElement4=conditionalElement();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) {result =conditionalElement4;}

                    }
                    break;
                case 2 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:71:4: question
                    {
                    pushFollow(FOLLOW_question_in_element175);
                    question5=question();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) {result =question5;}

                    }
                    break;
                case 3 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:72:4: computedQuestion
                    {
                    pushFollow(FOLLOW_computedQuestion_in_element182);
                    computedQuestion6=computedQuestion();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) {result =computedQuestion6;}

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, element_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "element"



    // $ANTLR start "question"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:76:1: question returns [Question result] : Ident ':' StringLit type ;
    public final Question question() throws RecognitionException {
        Question result = null;

        int question_StartIndex = input.index();

        Token Ident7=null;
        Token StringLit8=null;
        Type type9 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:77:3: ( Ident ':' StringLit type )
            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:77:5: Ident ':' StringLit type
            {
            Ident7=(Token)match(input,Ident,FOLLOW_Ident_in_question203); if (state.failed) return result;

            match(input,24,FOLLOW_24_in_question205); if (state.failed) return result;

            StringLit8=(Token)match(input,StringLit,FOLLOW_StringLit_in_question207); if (state.failed) return result;

            pushFollow(FOLLOW_type_in_question209);
            type9=type();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) {result =new Question(new Ident((Ident7!=null?Ident7.getText():null)),new StringLit((StringLit8!=null?StringLit8.getText():null)),type9);}

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, question_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "question"



    // $ANTLR start "computedQuestion"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:79:1: computedQuestion returns [ComputedQuestion result] : Ident ':' StringLit type '(' expr= orExpr ')' ;
    public final ComputedQuestion computedQuestion() throws RecognitionException {
        ComputedQuestion result = null;

        int computedQuestion_StartIndex = input.index();

        Token Ident10=null;
        Token StringLit11=null;
        Expr expr =null;

        Type type12 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:80:3: ( Ident ':' StringLit type '(' expr= orExpr ')' )
            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:80:5: Ident ':' StringLit type '(' expr= orExpr ')'
            {
            Ident10=(Token)match(input,Ident,FOLLOW_Ident_in_computedQuestion227); if (state.failed) return result;

            match(input,24,FOLLOW_24_in_computedQuestion229); if (state.failed) return result;

            StringLit11=(Token)match(input,StringLit,FOLLOW_StringLit_in_computedQuestion231); if (state.failed) return result;

            pushFollow(FOLLOW_type_in_computedQuestion233);
            type12=type();

            state._fsp--;
            if (state.failed) return result;

            match(input,18,FOLLOW_18_in_computedQuestion235); if (state.failed) return result;

            pushFollow(FOLLOW_orExpr_in_computedQuestion239);
            expr=orExpr();

            state._fsp--;
            if (state.failed) return result;

            match(input,19,FOLLOW_19_in_computedQuestion241); if (state.failed) return result;

            if ( state.backtracking==0 ) {result =new ComputedQuestion(new Ident((Ident10!=null?Ident10.getText():null)),new StringLit((StringLit11!=null?StringLit11.getText():null)),type12,expr);}

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, computedQuestion_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "computedQuestion"



    // $ANTLR start "conditionalElement"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:83:1: conditionalElement returns [ConditionalElement result] : ( 'if' '(' expr= orExpr ')' '{' b1= body '}' 'else' '{' b2= body '}' | 'if' '(' expr= orExpr ')' '{' body '}' );
    public final ConditionalElement conditionalElement() throws RecognitionException {
        ConditionalElement result = null;

        int conditionalElement_StartIndex = input.index();

        Expr expr =null;

        Body b1 =null;

        Body b2 =null;

        Body body13 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:84:2: ( 'if' '(' expr= orExpr ')' '{' b1= body '}' 'else' '{' b2= body '}' | 'if' '(' expr= orExpr ')' '{' body '}' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==32) ) {
                int LA4_1 = input.LA(2);

                if ( (synpred7_QL()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:84:3: 'if' '(' expr= orExpr ')' '{' b1= body '}' 'else' '{' b2= body '}'
                    {
                    match(input,32,FOLLOW_32_in_conditionalElement260); if (state.failed) return result;

                    match(input,18,FOLLOW_18_in_conditionalElement262); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_conditionalElement266);
                    expr=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,19,FOLLOW_19_in_conditionalElement268); if (state.failed) return result;

                    match(input,33,FOLLOW_33_in_conditionalElement270); if (state.failed) return result;

                    pushFollow(FOLLOW_body_in_conditionalElement273);
                    b1=body();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,35,FOLLOW_35_in_conditionalElement274); if (state.failed) return result;

                    match(input,30,FOLLOW_30_in_conditionalElement276); if (state.failed) return result;

                    match(input,33,FOLLOW_33_in_conditionalElement278); if (state.failed) return result;

                    pushFollow(FOLLOW_body_in_conditionalElement282);
                    b2=body();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,35,FOLLOW_35_in_conditionalElement283); if (state.failed) return result;

                    if ( state.backtracking==0 ) {result =new IfThenElse(expr,b1,b2);}

                    }
                    break;
                case 2 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:85:3: 'if' '(' expr= orExpr ')' '{' body '}'
                    {
                    match(input,32,FOLLOW_32_in_conditionalElement290); if (state.failed) return result;

                    match(input,18,FOLLOW_18_in_conditionalElement292); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_conditionalElement296);
                    expr=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,19,FOLLOW_19_in_conditionalElement298); if (state.failed) return result;

                    match(input,33,FOLLOW_33_in_conditionalElement300); if (state.failed) return result;

                    pushFollow(FOLLOW_body_in_conditionalElement302);
                    body13=body();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,35,FOLLOW_35_in_conditionalElement303); if (state.failed) return result;

                    if ( state.backtracking==0 ) {result =new IfThen(expr,body13);}

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, conditionalElement_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "conditionalElement"



    // $ANTLR start "primary"
    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:91:1: primary returns [Expr result] : ( Decimal | Int | StringLit | BoolLit | Ident | '(' x= orExpr ')' );
    public final Expr primary() throws RecognitionException {
        Expr result = null;

        int primary_StartIndex = input.index();

        Token Decimal14=null;
        Token Int15=null;
        Token StringLit16=null;
        Token BoolLit17=null;
        Token Ident18=null;
        Expr x =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return result; }

            // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:92:3: ( Decimal | Int | StringLit | BoolLit | Ident | '(' x= orExpr ')' )
            int alt5=6;
            switch ( input.LA(1) ) {
            case Decimal:
                {
                alt5=1;
                }
                break;
            case Int:
                {
                alt5=2;
                }
                break;
            case StringLit:
                {
                alt5=3;
                }
                break;
            case BoolLit:
                {
                alt5=4;
                }
                break;
            case Ident:
                {
                alt5=5;
                }
                break;
            case 18:
                {
                alt5=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:92:5: Decimal
                    {
                    Decimal14=(Token)match(input,Decimal,FOLLOW_Decimal_in_primary326); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new DecimalLit(Float.parseFloat((Decimal14!=null?Decimal14.getText():null))); }

                    }
                    break;
                case 2 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:93:5: Int
                    {
                    Int15=(Token)match(input,Int,FOLLOW_Int_in_primary334); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new IntegerLit(Integer.parseInt((Int15!=null?Int15.getText():null))); }

                    }
                    break;
                case 3 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:94:5: StringLit
                    {
                    StringLit16=(Token)match(input,StringLit,FOLLOW_StringLit_in_primary342); if (state.failed) return result;

                    if ( state.backtracking==0 ) {result = new StringLit((StringLit16!=null?StringLit16.getText():null));}

                    }
                    break;
                case 4 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:95:5: BoolLit
                    {
                    BoolLit17=(Token)match(input,BoolLit,FOLLOW_BoolLit_in_primary350); if (state.failed) return result;

                    if ( state.backtracking==0 ) {result = new BoolLit(Boolean.parseBoolean((BoolLit17!=null?BoolLit17.getText():null)));}

                    }
                    break;
                case 5 :
                    // /home/jahn/workspace1/QLAndroid/src/org/uva/sea/ql/parser/antlr/QL.g:96:5: Ident
                    {
                    Ident18=(Token)match(input,Ident,FOLLOW_Ident_in_primary359); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Ident((Ident18!=null?Ident18.getText():null)); }
